# guardrly-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
guardrly/: __init__.py
install/: README.md  install.ps1  install.sh
mcp_server/: __main__.py  interceptor.py  local_queue.py  log_shipper.py  pii_scrubber.py  server.py
mcp_server/adapters/: __init__.py  base.py  generic.py  meta.py  shopify.py
mcp_server/rules/: meta.json  shopify.json
